Implemented controllers API.
